# rustacean.sh

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: cd.yaml  ci.yaml
crates/cli/: Cargo.toml
crates/cli/src/database/: mod.rs
crates/cli/src/database/tasks/: rustaceans.rs
crates/client/: Cargo.toml  Trunk.toml  tailwind.config.js
crates/client/assets/database/: books.json
crates/client/public/: index.html  styles.css
crates/client/src/: api.rs  lib.rs
crates/client/src/components/atoms/: github_stars.rs  mod.rs
crates/client/src/components/atoms/icons/: github.rs  mod.rs  star.rs
crates/client/src/components/molecules/: mod.rs  navigation_bar.rs
crates/client/src/components/organisms/: book_card.rs  header.rs  mod.rs  rustacean_card.rs
crates/client/src/components/templates/: website.rs
crates/client/src/pages/: about.rs  books.rs  members.rs  mod.rs  not_found.rs
crates/client/src/services/: api.rs  github.rs  mod.rs  session_cache.rs  static_assets.rs
crates/client/src/utils/: browser.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs  rustacean.rs
crates/server/: Cargo.toml  bun.lockb  package.json  wrangler.toml
crates/server/src/: lib.rs
crates/server/src/router/: mod.rs
crates/server/src/router/api/v1/: mod.rs
crates/server/src/router/api/v1/rustaceans/: mod.rs  retrieve.rs
data/rustaceans/: EstebanBorai.toml  LeoBorai.toml  luchosr.toml
