[workspace]
members = [
    "crates/client",
    "crates/server"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
axum  = { version = "0.7", default-features = false }
console_error_panic_hook = "0.1.1"
http = "1.2.0"
leptos = "0.6"
leptos_meta = "0.6"
leptos_router = "0.6"
reqwest = "0.12.9"
serde = "1.0"
serde_json = "1.0"
tower-http = "0.6"
tower-service = "0.3.2"
worker = "0.4.2"
worker-macros = "0.4.2"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = "0.3"
