[workspace]
members = [
    "crates/cli",
    "crates/client",
    "crates/proto",
    "crates/server"
]
default-members = [
    "crates/cli"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
axum  = { version = "0.7", default-features = false }
bincode = "1.3.3"
console_error_panic_hook = "0.1.1"
clap = "4.5.23"
http = "1.2.0"
leptos = "0.6"
leptos_meta = "0.6"
leptos_router = "0.6"
reqwest = "0.12.9"
serde = "1.0"
serde_json = "1.0"
toml = "0.8"
tower-http = "0.6"
tower-service = "0.3.2"
url = "2.0.0"
worker = "0.4.2"
worker-macros = "0.4.2"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = "0.3"

proto = { path = "./crates/proto" }
