
[package]
name = "client"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "app"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
leptos =  { workspace = true, features = ["csr"] }
leptos_meta = { workspace = true, features = ["csr"] }
leptos_router = { workspace = true, features = ["csr"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
proto = { workspace = true }
web-sys = { version = "0.3.76" ,  features=["Storage", "Window"]}



[dev-dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }
web-sys = { workspace = true ,  features=["Storage", "Window"]}
