[package]
name = "proto"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "proto"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
url = { workspace = true, features = ["serde"] }
