[package]
name = "server"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
axum  = { workspace = true, features = ["json"] }
console_error_panic_hook = { workspace = true }
http = { workspace = true }
tower-service = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
worker = { workspace = true, features = ["http", "axum"] }
worker-macros = { workspace = true, features = ["http"] }

proto = { workspace = true }
